feat!: configuration file support

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -13,6 +13,7 @@ linter:
     always_put_required_named_parameters_first: false
     always_specify_types: false
     always_use_package_imports: false
+    cascade_invocations: false
     prefer_asserts_with_message: false
     prefer_double_quotes: false
     prefer_final_parameters: false
