--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ environment:
 dependencies:
   collection: ^1.16.0
   meta: ^1.8.0
+  path: ^1.7.0
+  yaml: ^3.1.1
 
 dev_dependencies:
   test: ^1.21.0
